# cliply

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cliply.md  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  cliply_ui_design_spec.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/cliply-installer/: index.html  package-lock.json  package.json  vite.config.ts
apps/cliply-installer/src/: main.tsx  styles.css
apps/cliply-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/cliply-installer/src-tauri/capabilities/: default.json
apps/cliply-installer/src-tauri/src/: commands.rs  installer.rs  main.rs  payload.rs  platform.rs  webview2.rs
docs/: handoff-2026-05-08.md  installer.md  manual-test-checklist.md  privacy-and-logs.md  provider-testing.md  release-checklist.md  sync-design.md  v0.1.0-alpha-manual-test-checklist.md  v0.3.0-rc.1-manual-test-checklist.md  v0.4.0-beta.1-stabilization-test-results.md
scripts/: build-modern-installer-app.ps1  build-modern-installer.ps1  generate-msi-assets.ps1  prepare-modern-installer-payload.ps1
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: cliply-installer.nsi
src-tauri/nsis/: English.nsh  SimpChinese.nsh  installer-hooks.nsh
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  shortcuts.rs  tray.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql  002_fts.sql  003_sync.sql  004_sync_blobs.sql
src-tauri/src/models/: clipboard_item.rs  mod.rs  settings.rs
src-tauri/src/platform/: mod.rs  secure_storage.rs  theme_adapter.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: clipboard_listener.rs  clipboard_reader.rs  clipboard_writer.rs  foreground_window.rs  mod.rs  paste_simulator.rs  startup.rs
src-tauri/src/services/: blob_service.rs  clipboard_service.rs  content_detector.rs  database_service.rs  hash_service.rs  mod.rs  paste_service.rs  remote_sync_service.rs  search_service.rs  sensitive_detector.rs  settings_service.rs  sync_blob_service.rs  sync_crypto_service.rs  sync_merge_service.rs  sync_package_service.rs  sync_scheduler_service.rs  sync_secret_service.rs  sync_service.rs  sync_storage_provider.rs  update_check_service.rs
src-tauri/wix/: main.wxs  zh-CN.wxl
src/app/: App.tsx  routes.tsx
src/components/clipboard/: ClipboardActions.tsx  ClipboardDetailPane.tsx  ClipboardFilterTabs.tsx  ClipboardList.tsx  ClipboardListItem.tsx  ClipboardMetadata.tsx  ClipboardPreview.tsx  ClipboardSearchBar.tsx  EmptyState.tsx
src/components/common/: Badge.tsx  Card.tsx  ConfirmDialog.tsx  ContextMenu.tsx  IconButton.tsx  ImageViewer.tsx  PillTabs.tsx  ScrollArea.tsx  (+2 more)
src/lib/: clipboardCapabilities.ts  clipboardRepository.ts  clipboardTypes.ts  debugInfo.ts  detectContentType.ts  formatTime.ts  keyboard.ts  mockClipboardItems.ts  settingsRepository.ts  themeRepository.ts  updateService.ts  windowAdapter.ts
src/stores/: clipboardStore.ts  settingsStore.ts  uiStore.ts
src/styles/: global.css
src/theme/: theme.ts
(+6 files in other folders)
