[package]
name = "cliply"
version = "0.1.0"
description = "A local-first clipboard manager"
authors = ["Cliply"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cliply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = { version = "8.0.3", features = ["native-tls", "no-log"] }
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
ureq = "2.12"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security_Cryptography",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
