[package]
name = "cliply-modern-installer"
version = "0.4.1-beta.3"
description = "Modern installer for Cliply"
authors = ["Cliply"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging"
] }
